# VulkanEngine

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  VulkanEngine.sln  VulkanTest.sln  _attribute_8h_source.html  _bounding_box_8h_source.html  _buffer_8h_source.html  _buffer_base_8h_source.html  _camera_8h_source.html  _command_buffer_8h_source.html  _constants_8h_source.html  _descriptor_8h_source.html  _device_8h_source.html  _framebuffer_8h_source.html  _g_l_f_w_window_8h_source.html  _graphics_pipeline_8h_source.html  _image_8h_source.html  _image_base_8h_source.html  _index_attribute_8h_source.html  _keyboard_input_8h_source.html  _mesh_8h_source.html  _mesh_base_8h_source.html  _mouse_input_8h_source.html  _o_b_j_mesh_8h_source.html  _render_pass_8h_source.html  _scene_8h_source.html  _scene_object_8h_source.html  _scene_state_8h_source.html  _shader_8h_source.html  _shader_image_8h_source.html  _shader_module_8h_source.html  _single_usage_command_buffer_8h_source.html  _staged_buffer_8h_source.html  _staged_buffer_destination_8h_source.html  _swapchain_8h_source.html  _uniform_buffer_8h_source.html  _utilities_8h_source.html  (+169 more)
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
Libs/CImg-2.4.0_pre092218/: CImg.h  README.txt
VulkanEngine/: VulkanEngine.vcxproj  VulkanEngine.vcxproj.filters
VulkanEngine/include/VulkanEngine/: Attribute.h  Buffer.h  BufferBase.h  Camera.h  Constants.h  Descriptor.h  Framebuffer.h  GLFWWindow.h  GraphicsPipeline.h  Image.h  ImageBase.h  IndexAttribute.h  KeyboardInput.h  Mesh.h  MeshBase.h  MouseInput.h  OBJLoader.h  OBJMesh.h  RenderPass.h  Scene.h  SceneObject.h  SceneState.h  Shader.h  ShaderImage.h  ShaderModule.h  SingleUsageCommandBuffer.h  StagedBuffer.h  StagedBufferDestination.h  UniformBuffer.h  Utilities.h  VertexAttribute.h  VulkanManager.h  Window.h
VulkanEngine/shaders/: compile.bat  triangle.frag
VulkanEngine/src/: Attribute.cpp  Buffer.cpp  BufferBase.cpp  Camera.cpp  Descriptor.cpp  Framebuffer.cpp  GLFWWindow.cpp  GraphicsPipeline.cpp  Image.cpp  ImageBase.cpp  IndexAttribute.cpp  KeyboardInput.cpp  Mesh.cpp  MeshBase.cpp  MouseInput.cpp  OBJLoader.cpp  OBJMesh.cpp  RenderPass.cpp  Scene.cpp  SceneObject.cpp  SceneState.cpp  Shader.cpp  ShaderImage.cpp  ShaderModule.cpp  SingleUsageCommandBuffer.cpp  StagedBuffer.cpp  UniformBuffer.cpp  VertexAttribute.cpp  VulkanManager.cpp  Window.cpp  main.cpp
VulkanTest/: VulkanTest.vcxproj  VulkanTest.vcxproj.filters  main.cpp
VulkanTest/include/VulkanEngine/: Attribute.h  BufferBase.h  Camera.h  Constants.h  Descriptor.h  IndexAttribute.h  Mesh.h  ShaderImage.h  ShaderModule.h  SingleUsageCommandBuffer.h  StagedBufferDestination.h  VertexAttribute.h  VulkanManager.h
VulkanTest/include/VulkanTest/: Attribute.h  Buffer.h  BufferBase.h  Camera.h  Constants.h  Descriptor.h  GLFWWindow.h  Image.h  IndexAttribute.h  Mesh.h  MeshBase.h  OBJLoader.h  Renderable.h  Renderer.h  Shader.h  ShaderImage.h  ShaderModule.h  SingleUsageCommandBuffer.h  StagedBuffer.h  StagedBufferDestination.h  UniformBuffer.h  Utilities.h  Utils.h  VertexAttribute.h  VulkanManager.h  Window.h  glfw_window.h  window.h
VulkanTest/shaders/: triangle.frag  triangle.vert  vert.spv
VulkanTest/src/: Attribute.cpp  Buffer.cpp  BufferBase.cpp  Camera.cpp  Descriptor.cpp  GLFWWindow.cpp  Image.cpp  IndexAttribute.cpp  Mesh.cpp  MeshBase.cpp  OBJLoader.cpp  Renderable.cpp  Renderer.cpp  Shader.cpp  ShaderImage.cpp  ShaderModule.cpp  SingleUsageCommandBuffer.cpp  StagedBuffer.cpp  UniformBuffer.cpp  VertexAttribute.cpp  VulkanManager.cpp  Window.cpp  glfw_window.cpp  main.cpp  window.cpp
assets/capsule/: source
doc/: Doxyfile
doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  index.html
doc/latex/: refman.tex
examples/: CMakeLists.txt  ExampleUtils.h
examples/SimpleScene/: main.cpp
examples/TexturedQuad/: main.cpp
examples/Triangle/: main.cpp
include/VulkanEngine/: Attribute.h  BoundingBox.h  Buffer.h  BufferBase.h  Camera.h  CommandBuffer.h  Constants.h  Descriptor.h  Device.h  Framebuffer.h  GLFWWindow.h  GraphicsPipeline.h  Image.h  ImageBase.h  IndexAttribute.h  KeyboardInput.h  Mesh.h  MeshBase.h  MouseInput.h  OBJMesh.h  RenderPass.h  Scene.h  SceneObject.h  SceneState.h  Shader.h  ShaderImage.h  ShaderModule.h  SingleUsageCommandBuffer.h  StagedBuffer.h  StagedBufferDestination.h  Swapchain.h  UniformBuffer.h  Utilities.h  VertexAttribute.h  VulkanManager.h  Window.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  (+31 more)
shaders/: compile.bat  frag.spv  triangle.frag  triangle.vert  vert.spv
src/: Attribute.cpp  Buffer.cpp  BufferBase.cpp  Camera.cpp  Descriptor.cpp  Device.cpp  Framebuffer.cpp  GLFWWindow.cpp  GraphicsPipeline.cpp  Image.cpp  ImageBase.cpp  IndexAttribute.cpp  KeyboardInput.cpp  Mesh.cpp  MeshBase.cpp  MouseInput.cpp  OBJMesh.cpp  RenderPass.cpp  Scene.cpp  SceneObject.cpp  SceneState.cpp  Shader.cpp  ShaderImage.cpp  ShaderModule.cpp  SingleUsageCommandBuffer.cpp  StagedBuffer.cpp  Swapchain.cpp  UniformBuffer.cpp  VertexAttribute.cpp  VulkanManager.cpp  Window.cpp
src/include/VulkanEngine/: Attribute.h  Buffer.h  BufferBase.h  Camera.h  Framebuffer.h  GLFWWindow.h  Image.h  ImageBase.h  Mesh.h  MeshBase.h  OBJMesh.h  RenderPass.h  Shader.h  ShaderImage.h  StagedBufferDestination.h  VertexAttribute.h  VulkanManager.h  Window.h
tests/: CMakeLists.txt  IntegrationTests.cpp
